--- a/.env
+++ b/.env
@@ -1,15 +1,8 @@
 PORT=8666
 API_PATH=
 IMAGE_WAIT_TIME=25000
-PROXY_MODE=0
-PROXY_URL=
+PROXY_MODE=1
+PROXY_URL=socks5://R:password@hkbgp6.rfym.live:505
 PROXY_API=
 IMAGE_COUNT=1
-ACCOUNT_PATH=./data/account.txt
-# 0: 不使用账号，自行传入session_id
-# 1: 使用环境变量中的session_id
-# 2: 使用文件中的session_id
-# 选择模式时，传入 session_id 默认不可用(暂时不加两者同时启用的功能)
-ACCOUNT_MODE=1
-ACCOUNTS=
-API_KEY=sk-123456
+API_KEY=sk-rfym21
